    database in case of failure, but exit with an error instead. The retry behavior 
    is left for daemons.
  - improved packaging (try to install files in more standard places)
  - improved init script for Almighty (into deb and rpm packages)
  - fixed performance issue on oarstat (array_id index missing)
  - fixed performance issue (job_id index missing in event_log table)
  - fixed a performance issue at job submission (optimized a query)

version 2.3.4:
--------------
  - add the command "oar_resources_init" to easily detect and initialize the
    whole resources of a cluster.
  - "oaradmin version" : now retrieve the most recent database schema number
  - Fix rights on the "schema" table in postgresql.
  - Bug #7509: fix bug in add_micheline_subjob for array jobs + jobtypes 
  - Ctrl-C was not working anymore in oarsub.
    It seems that the signal handler does not handle the previous syntax
    ($SIG = 'qdel')
  - Bug #7487: bad initialisation of the gnatt for the container jobs.
  - Fix bug in oarsh with the "-l" option
  - Bug #7634: test if the resource property value is effectively defined
    otherwise print a ''
  - Bug #7674: remove the computation of the scheduler_priority field for
    besteffort jobs from the asynchronous OAR part. Now the value is set when
    the jobs are turned into toLaunch state and in Error/Terminated.
  - Bug #7691: add --array and --array-param-file options parsing into the
    submitted script. Fix also some parsing errors.
  - Bug #7962: enable resource property "cm_availability" to be manipulated by
    the oarnodesetting command

version 2.3.3:
--------------
  - Fix default admission rules: case unsensitive check for properties used in 
    oarsub
  - Add new oaradmin subcommand : oaradmin conf. Useful to edit conf files and 
    keep changes in a Subversion repository.
  - Kill correctly each taktuk command children in case of a timeout.
  - New feature: array jobs (option --array)  (on oarsub, oarstat oardel, 